fix section title on mobile

--- a/scss/components/_section-title.scss
+++ b/scss/components/_section-title.scss
@@ -1,7 +1,7 @@
 .section-title {
   font-family: var(--title-text);
   font-weight: 700;
-  font-size: 32px;
+  font-size: 26px;
   line-height: 1.2;
   color: var(--color-gold);
   text-align: center;
@@ -16,7 +16,7 @@
 
   &::before,
   &::after {
-    content: "";
+    content: '';
     display: inline-block;
     width: 80px;
     height: 2px;
